feat(core,media): add Warp Navigation & Admin Editor GUI, Kingdom Territory PvP friendly-fire protection, flexible Media banner placement & cloning, fast single-plugin compiler